# atmosynth

./: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
common/data/: .gitignore  CMakeLists.txt  build.gradle.kts
common/data/src/androidTest/java/com/devalr/data/: ExampleInstrumentedTest.kt
common/data/src/main/assets/: api_key.txt
common/data/src/main/cpp/: secrets.cpp  secrets.h
common/data/src/main/java/com/devalr/data/: GeminiDatasource.kt  GeminiDatasourceImpl.kt  Secrets.kt
common/data/src/main/java/com/devalr/data/databases/: PromptResultDao.kt  PromptResultDatabase.kt  PromptResultEntity.kt
common/data/src/main/java/com/devalr/data/databases/city/: CityDao.kt  CityDatabase.kt  CityEntity.kt
common/data/src/main/java/com/devalr/data/databases/prompt/: PromptResultDao.kt  PromptResultDatabase.kt  PromptResultEntity.kt
common/data/src/main/java/com/devalr/data/datasources/: CityDatasource.kt  GeminiDatasource.kt  WeatherDatasource.kt
common/data/src/main/java/com/devalr/data/datasources/helpers/: AemetApiHelper.kt  Constants.kt  WeatherQuery.kt
common/data/src/main/java/com/devalr/data/datasources/impl/: CityDatasourceImpl.kt  GeminiDatasourceImpl.kt  WeatherDatasourceImpl.kt
common/data/src/main/java/com/devalr/data/di/: Modules.kt
common/data/src/main/java/com/devalr/data/dto/: CityDto.kt  DailyWeatherDto.kt  DataResponse.kt  WeatherDataDaily.kt
common/data/src/main/java/com/devalr/data/dto/dailyweather/: DailyWeatherDto.kt  (+5 more)
common/data/src/test/java/com/devalr/data/: ExampleUnitTest.kt
(+292 files in other folders)
